crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__install_deps_legacy__doesnt_add_if_not_listed.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupToolchain(node:20.0.0)" ]
    1 -> 0 [ ]
}
