crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__install_deps_legacy__installs_in_project_when_not_in_depman_workspace.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupToolchain(node:20.0.0)" ]
    2 [ label="InstallWorkspaceDeps(node:20.0.0)" ]
    3 [ label="InstallProjectDeps(node:20.0.0, out)" ]
    1 -> 0 [ ]
    2 -> 0 [ ]
    2 -> 1 [ ]
    3 -> 0 [ ]
    3 -> 1 [ ]
}
